elpa-elpa4/envs/dev/application-service/destination-metrics-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: application-service-dest-rule-metrics
spec:
  host: dev-metrics-application-service
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8081
        tls:
          mode: DISABLE
