elpa-elpa4/envs/dev/application-service/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: application-service-dest-rule
spec:
  host: dev-application-service
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8080
        tls:
          mode: DISABLE
