elpa-elpa4/envs/dev/application-service/virtualservice-patch.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtual-service
spec:
  hosts:
    - "dev-application-service-elpa-elpa4.copsinop.de"
    - "dev-application-service.elpa-elpa4.svc.cluster.local"
  gateways:
    - istio-system/mesh-gateway
    - mesh
  http:
    - name: dev-application-service-route
      route:
        - destination:
            host: dev-service-application-service
            port:
              number: 8080
